--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "githubio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://ycfelix.github.io/",
+  "homepage": "http://ycfelix.github.io/ycfelix",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "jquery": "^3.5.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^0.88.2"
   },
   "scripts": {
     "start": "react-scripts start",
